add aux scripts; updated feature and changed suite configuration

--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -19,7 +19,7 @@ drivers {
     webdriver.ie.driver = "src/test/resources/webdriver/windows/IEDriverServer.exe"
   }
   mac {
-    webdriver.chrome.driver = "src/test/resources/webdriver/mac/chromedriver"
+    webdriver.chrome.driver = "/usr/local/Caskroom/chromedriver/81.0.4044.69/chromedriver"
     webdriver.gecko.driver = "src/test/resources/webdriver/mac/geckodriver"
   }
   linux {
