add cloud bash scripts

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ buildNumber.properties
 .idea
 *.iml
 .DS_Store
+cloud_auth.json*
+features/
+*.zip
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
